# falck

./: .gitignore  .opencode.json  README.md  components.json  falck-spec.md  index.html  package.json  tailwind.config.ts  vite.config.ts
.falck/: config.yaml
.github/workflows/: deploy.yml  release.yml
desktop/: package.json  tailwind.config.ts  vite.config.ts
desktop/scripts/: predev.ts
desktop/sidecar-opencode/: index.ts  package.json
desktop/src/: index.css  routeTree.gen.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/share/lima/: .keep  placeholder.txt
desktop/src-tauri/src/: backend.rs  blocking.rs  containers.rs  falck.rs  github.rs  lib.rs  opencode.rs  project.rs  ssh.rs  storage.rs  uploads.rs
desktop/src-tauri/src/git/: mod.rs
desktop/src/components/: AIChat.tsx  ChatHeaderActions.tsx  FinishProjectDialog.tsx  GitToolsDialog.tsx  LimaContainersPanel.tsx  OpenCodeManager.tsx  OpenCodeSettings.tsx  RemoteOperations.tsx  RepoSelector.tsx  SaveChangesDialog.tsx  SettingsPage.tsx  SetupWizard.tsx  ThemeButton.tsx  UnsavedChangesDialog.tsx  VirtualizedBackendPanel.tsx  VmStatusIndicator.tsx  VmStatusOverlay.tsx
desktop/src/contexts/: AIChatContext.tsx  VmStatusContext.tsx
desktop/src/lib/: form-validators.ts  (+3 more)
scripts/: bump.ts  predev.ts
sidecar-opencode/: index.ts  package-lock.json  rename.js  tsconfig.json
src/: App.css  App.tsx  index.css  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: falck.rs  github.rs  lib.rs  main.rs  opencode.rs  project.rs  storage.rs
src-tauri/src/git/: mod.rs
src/components/: AIChat.tsx  BranchManager.tsx  BranchSwitcher.tsx  ChatHeaderActions.tsx  CommitHistory.tsx  GitToolsDialog.tsx  OpenCodeManager.tsx  OpenCodeSettings.tsx  RemoteOperations.tsx  RepoSelector.tsx  SaveChangesDialog.tsx  SettingsPage.tsx  StagingArea.tsx  UnsavedChangesDialog.tsx
src/contexts/: AIChatContext.tsx
src/lib/: branching.ts  theme.ts
src/routes/: __root.tsx  create.astro.tsx  create.index.tsx  index.tsx  overview.tsx  repo.tsx  settings.index.tsx  settings.tsx
src/schemas/: forms.ts
src/services/: configService.ts  falckService.ts  gitService.ts  opencodeService.ts  projectService.ts
website/: astro.config.mjs  package.json
(+71 files in other folders)
