[package]
name = "falck"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "falck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1.0"
base64 = "0.22"
git2 = { version = "0.20.3", features = ["vendored-openssl"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
rusqlite = { version = "0.25.3", features = ["bundled"] }
regex = "1"
semver = "1.0"
lazy_static = "1.4"
open = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dotenvy = "0.15"
